--- a/Rouster/Info.plist
+++ b/Rouster/Info.plist
@@ -38,5 +38,9 @@
 	</array>
 	<key>UIApplicationExitsOnSuspend</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 </dict>
 </plist>
