Committing Location Manager to discover current location.  Also asking user to enable location services

--- a/Rouster/Info.plist
+++ b/Rouster/Info.plist
@@ -42,5 +42,9 @@
 	<array>
 		<string>audio</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string></string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string></string>
 </dict>
 </plist>
